--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,31 @@
-{{'hey'}}
+<input type='text' [(ngModel)]='title'>
+{{title}}
+
+
+
+<div *ngIf="title  === 'Yocc'" >
+  hola
+</div>
+
+<div [ngSwitch]= "title">
+  <p *ngSwitchCase = "'Yonatan'"> Yonatan </p>
+  <p *ngSwitchCase = "'Jorge'"> jorge </p>
+  <p *ngSwitchCase = "'Camilo'"> camilo </p>
+</div>
+
+<button (click)="addItem()">add cosa</button>
+
+<ul>
+  <li *ngFor="let cosa of items; index as i">
+    {{cosa}} {{i}}
+    <button (click)= "deleteItem(i)">Delete</button>
+  </li>
+</ul>
+
+<div class="product-grid">
+  <app-product 
+    *ngFor="let product of products" 
+    (productClicked)="clickProduct($event)" 
+    [product]="product">
+  </app-product>s
+</div>
