--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -4,3 +4,4 @@
 <p>{{product.description | slice:0:20}}</p>
 <p>{{today | date}}</p>
 <button (click)="addCart()"> Agregar al carrito</button>
+<a routerLink="/products/{{product.id}}">ver detalle</a>
