--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,17 @@
-<nav>
-    <a routerLink="/home" routerLinkActive="active" >home</a>
-    <a routerLink="/products" routerLinkActive="active">Products</a>
-    <a routerLink="/contact" routerLinkActive="active">contact</a>
-</nav>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+        <div class="row between-xs middel-xs header-row ">
+            <nav>
+                <a routerLink="/home" routerLinkActive="active" >home</a>
+                <a routerLink="/products" routerLinkActive="active">Products</a>
+                <a routerLink="/contact" routerLinkActive="active">contact</a>
+            </nav>
+            <a mat-raised-button matBadge="4" matBadgeColor="accent">>
+                <mat-icon>shopping_cart</mat-icon> 
+                Carrito
+            </a>
+        </div>
+    
+    </mat-toolbar-row>
+</mat-toolbar>
+
