--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,13 @@ body {
 .product-grid{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 10px 20px ;
 }
+.container {
+    width: 1100;
+    padding-right: 20px;
+    padding-left: 20px;
+
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
