--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,10 +1,14 @@
-<div>
-    <img [src]="product.image" alt="">
-</div>
-<div>
-    <ul>
-        <li>Nombre:{{product.title}}</li>
-        <li>Precio: {{product.price | currency}}</li>
-    </ul>
-    <p>{{product.description}}</p>
+<div *ngIf="product">
+    <div>
+        <img [src]="product.image" alt="">
+    </div>
+    <div>
+        <ul>
+            <li>Nombre:{{product.title}}</li>
+            <li>Precio: {{product.price | currency}}</li>
+        </ul>
+        <p>{{product.description}}</p>
+    </div>
+    <button (click)="createProduct()">crear producto</button>
+    <button (click)="deleteProduct()">elimnar producto</button>
 </div>
