--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,11 +2,9 @@
     <mat-toolbar-row>
         <div class="row between-xs middel-xs header-row ">
             <nav>
-                <a routerLink="/home" routerLinkActive="active" >home</a>
                 <a routerLink="/products" routerLinkActive="active">Products</a>
-                <a routerLink="/contact" routerLinkActive="active">contact</a>
             </nav>
-            <a mat-raised-button matBadge="4" matBadgeColor="accent">>
+            <a routerLink="/order" mat-raised-button matBadge={{total}} matBadgeColor="accent">>
                 <mat-icon>shopping_cart</mat-icon> 
                 Carrito
             </a>
